Get overlap matrix between sessions

--- a/notebooks/zoom_connections_analysis.ipynb
+++ b/notebooks/zoom_connections_analysis.ipynb
@@ -6,14 +6,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import datetime\n",
     "from dataclasses import dataclass\n",
     "from dateutil import parser as date_parser\n",
     "\n",
     "import numpy as np\n",
     "\n",
+    "import matplotlib.pyplot as plt\n",
     "import pandas as pd\n",
-    "from pathlib import Path"
+    "from pathlib import Path\n",
+    "\n",
+    "%matplotlib inline"
    ]
   },
   {
@@ -118,24 +120,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sessions[0].start"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def get_n_participants_of_session(\n",
+    "def get_participants_of_session(\n",
     "    df: pd.DataFrame, session: Session, min_time_frac=0.3\n",
-    ") -> int:\n",
+    ") -> np.ndarray:\n",
     "    _a = np.minimum(df[\"end\"], pd.to_datetime([session.end] * len(df)))\n",
     "    _b = np.maximum(df[\"start\"], pd.to_datetime([session.start] * len(df)))\n",
     "    df[\"tmp_overlap_min\"] = (_a - _b).dt.total_seconds() / 60\n",
     "    min_time_min = (session.duration * min_time_frac).total_seconds() / 60\n",
-    "    return len(df.query(f\"tmp_overlap_min > {min_time_min}\").name.unique())"
+    "    return df.query(f\"tmp_overlap_min > {min_time_min}\").name.unique()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "code",
@@ -158,7 +156,33 @@
    "outputs": [],
    "source": [
     "for s in sessions:\n",
-    "    print(f\"{s.name}: {get_n_participants_of_session(df, s)}\")"
+    "    print(f\"{s.name}: {len(get_participants_of_session(df, s))}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def get_overlap_matrix(df, sessions: list[Session]) -> np.ndarray:\n",
+    "    n = len(sessions)\n",
+    "    overlap_matrix = np.zeros((n, n))\n",
+    "    for i, s1 in enumerate(sessions):\n",
+    "        for j, s2 in enumerate(sessions):\n",
+    "            participants_s1 = get_participants_of_session(df, s1)\n",
+    "            participants_s2 = get_participants_of_session(df, s2)\n",
+    "            overlap_matrix[i, j] = len(np.intersect1d(participants_s1, participants_s2))\n",
+    "    return overlap_matrix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "get_overlap_matrix(df, sessions)"
    ]
   }
  ],
