--- a/notebooks/time_series_educators.ipynb
+++ b/notebooks/time_series_educators.ipynb
@@ -6,8 +6,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import yaml\n",
-    "import frontmatter"
+    "import frontmatter\n",
+    "from collections import defaultdict\n",
+    "from pathlib import Path\n",
+    "import git\n",
+    "from datetime import date\n",
+    "import matplotlib.pyplot as plt\n",
+    "\n",
+    "plt.style.use(\n",
+    "    \"https://github.com/dhaitz/matplotlib-stylesheets/raw/master/pitayasmoothie-light.mplstyle\"\n",
+    ")\n",
+    "# plt.style.use('fivethirtyeight')"
    ]
   },
   {
@@ -16,9 +25,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from collections import defaultdict\n",
-    "from pathlib import Path\n",
-    "\n",
     "educator_keys = [\n",
     "    \"mentor\",\n",
     "    \"instructor\",\n",
@@ -27,21 +33,7 @@
     "    \"material\",  # deprecated for author\n",
     "]\n",
     "\n",
-    "educator_key_mapping = {\"material\": \"author\"}\n",
-    "\n",
-    "\n",
-    "def get_educators(base_dir: Path) -> dict[str, int]:\n",
-    "    profile_files = [\n",
-    "        f for f in base_dir.glob(\"*.md\") if not \"template\" in f.name.casefold()\n",
-    "    ]\n",
-    "    educator_count = defaultdict(int)\n",
-    "    for f in profile_files:\n",
-    "        dct = frontmatter.load(f)\n",
-    "        for k in educator_keys:\n",
-    "            roles = [r.casefold() for r in dct.get(\"training_roles\", [])]\n",
-    "            if k in roles:\n",
-    "                educator_count[k] += 1\n",
-    "    return educator_count"
+    "educator_key_mapping = {\"material\": \"author\"}"
    ]
   },
   {
@@ -50,17 +42,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "get_educators(Path(\"/Users/fuchur/Documents/22/git_sync/hsf.github.io/_profiles/\"))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import git\n",
-    "\n",
     "repo = git.Repo(\"/Users/fuchur/Documents/22/git_sync/hsf.github.io/\")"
    ]
   },
@@ -86,7 +67,7 @@
     "            content = repo.git.show(\"{}:{}\".format(commit.hexsha, entry.path))\n",
     "            try:\n",
     "                dct = frontmatter.loads(content)\n",
-    "            except Exception:  # ParserError\n",
+    "            except Exception:  # ParserError, where are you defined? ;)\n",
     "                pass\n",
     "            keys = dct.get(\"training_roles\", [])\n",
     "            if keys is None:\n",
@@ -112,8 +93,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from datetime import date\n",
-    "\n",
     "dt_times = [date.fromtimestamp(t) for t in times]"
    ]
   },
@@ -123,42 +102,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import matplotlib.pyplot as plt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "educator_counts.keys()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "plt.style.use(\n",
-    "    \"https://github.com/dhaitz/matplotlib-stylesheets/raw/master/pitayasmoothie-light.mplstyle\"\n",
-    ")\n",
-    "# plt.style.use('fivethirtyeight')\n",
-    "\n",
     "_, ax = plt.subplots()\n",
     "for k, vs in educator_counts.items():\n",
     "    print(k, vs)\n",
     "    ax.plot(dt_times, vs, label=k)\n",
     "ax.legend(frameon=False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
