--- a/notebooks/zoom_connections_analysis.ipynb
+++ b/notebooks/zoom_connections_analysis.ipynb
@@ -35,8 +35,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(data_dir / \"participants_66360376183.csv\")\n",
-    "indico_df = pd.read_csv(data_dir / \"indico_registrations.csv\")"
+    "fnames = list(data_dir.glob(\"participants_66360376183*.csv\"))\n",
+    "print(fnames)\n",
+    "df = pd.concat([pd.read_csv(fn) for fn in fnames]).reset_index()\n",
+    "df.drop_duplicates(inplace=True)\n",
+    "df.reset_index(inplace=True)\n",
+    "print(f\"Zoom connection rows: {len(df)}\")\n",
+    "indico_df = pd.read_csv(data_dir / \"indico_registrations.csv\")\n",
+    "print(f\"Indico registrants: {len(indico_df)}\")"
    ]
   },
   {
@@ -71,6 +77,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "df[\"start\"].hist(figsize=(16, 5))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "names = df.name.unique()"
    ]
   },
@@ -80,25 +95,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def match_names(index_names: np.ndarray, target_names: np.ndarray):\n",
+    "def no_middle_names(name: str):\n",
+    "    if name.count(\" \") < 2:\n",
+    "        return name\n",
+    "    first, *_, last = name.split(\" \")\n",
+    "    return \" \".join([first, last])\n",
+    "\n",
+    "\n",
+    "def match_names(\n",
+    "    index_names: np.ndarray, target_names: np.ndarray, no_middle=True\n",
+    ") -> tuple[np.ndarray, np.ndarray]:\n",
     "    \"\"\"Match names from index_names to target_names using fuzzy matching.\n",
     "\n",
-    "    Parameters\n",
-    "    ----------\n",
-    "    index_names : np.ndarray\n",
-    "        Names to match.\n",
-    "    target_names : np.ndarray\n",
-    "        Names to match to.\n",
+    "    args:\n",
+    "        index_names: Names to match.\n",
+    "        target_names: Names to match to.\n",
     "\n",
-    "    Returns\n",
-    "    -------\n",
-    "    np.ndarray\n",
-    "        Array of indices of target_names that match index_names.\n",
+    "    returns:\n",
+    "        Array of indices of target_names that match index_names\n",
+    "        array of levenshtein distances\n",
     "    \"\"\"\n",
+    "\n",
+    "    def preproc(name: str) -> str:\n",
+    "        if no_middle:\n",
+    "            return no_middle_names(name)\n",
+    "        return name\n",
+    "\n",
     "    matches = []\n",
     "    scores = []\n",
     "    for i, name in enumerate(index_names):\n",
-    "        fuzzies = [fuzz.ratio(name, target_name) for target_name in target_names]\n",
+    "        fuzzies = [\n",
+    "            fuzz.ratio(preproc(name), preproc(target_name))\n",
+    "            for target_name in target_names\n",
+    "        ]\n",
     "        idx = np.argmax(fuzzies)\n",
     "        matches.append(target_names[idx])\n",
     "        scores.append(fuzzies[idx])\n",
@@ -113,7 +142,29 @@
    "source": [
     "df[\"indico_name\"], df[\"indico_name_fuzzy_match_score\"] = match_names(\n",
     "    df.name.to_numpy(), indico_df.name.to_numpy()\n",
+    ")\n",
+    "_, df[\"indico_name_fuzzy_match_score_with_middle\"] = match_names(\n",
+    "    df.name.to_numpy(), indico_df.name.to_numpy(), no_middle=False\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "no_middle = df.groupby(\"name\")[\"indico_name_fuzzy_match_score\"].first()\n",
+    "with_middle = df.groupby(\"name\")[\"indico_name_fuzzy_match_score_with_middle\"].first()\n",
+    "_, ax = plt.subplots()\n",
+    "h_kwargs = dict(\n",
+    "    histtype=\"step\",\n",
+    "    lw=1.5,\n",
+    ")\n",
+    "_, bins, _ = ax.hist(no_middle.to_numpy(), label=\"no middle\", **h_kwargs)\n",
+    "ax.hist(with_middle.to_numpy(), label=\"with middle\", bins=bins, **h_kwargs)\n",
+    "ax.set_xlabel(\"Levenshtein distance\")\n",
+    "ax.legend(loc=\"upper left\")"
    ]
   },
   {
@@ -180,17 +231,22 @@
     "def get_participants_of_session(\n",
     "    df: pd.DataFrame, session: Session, min_time_frac=0.3\n",
     ") -> np.ndarray:\n",
+    "    # session = sessions[0]\n",
+    "    # min_time_frac = 0.3\n",
     "    _a = np.minimum(df[\"end\"], pd.to_datetime([session.end] * len(df)))\n",
     "    _b = np.maximum(df[\"start\"], pd.to_datetime([session.start] * len(df)))\n",
+    "    df[\"clipped_end\"] = _a\n",
+    "    df[\"clipped_start\"] = _b\n",
     "    df[\"tmp_overlap_min\"] = (_a - _b).dt.total_seconds() / 60\n",
     "    min_time_min = (session.duration * min_time_frac).total_seconds() / 60\n",
-    "    return df.query(f\"tmp_overlap_min > {min_time_min}\").name.unique()"
+    "    # print(df.query(\"name == 'Kilian Lieret'\")[[\"clipped_end\", \"clipped_start\", \"start\", \"end\", \"tmp_overlap_min\"]])\n",
+    "    grouped = df.groupby(\"name\")[\"tmp_overlap_min\"]\n",
+    "    # print(grouped.get_group(\"Kilian Lieret\"))\n",
+    "    name2time = grouped.apply(lambda x: x[x > 0].sum())\n",
+    "    # print(name2time[name2time > 0])\n",
+    "    mask = name2time > min_time_min\n",
+    "    return list(name2time[mask].index.unique())"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "code",
@@ -201,9 +257,22 @@
     "sessions = [\n",
     "    Session(\"bash\", \"2022-09-28 10:00\", \"2022-09-28 12:30\"),\n",
     "    Session(\"python 1\", \"2022-09-28 13:45\", \"2022-09-28 17:00\"),\n",
-    "    Session(\"git\", \"2022-09-29 10:00\", \"2022-09-28 13:00\"),\n",
-    "    Session(\"python 2\", \"2022-09-29 13:45\", \"2022-09-28 17:00\"),\n",
+    "    Session(\"git\", \"2022-09-29 10:00\", \"2022-09-29 13:00\"),\n",
+    "    Session(\"python 2\", \"2022-09-29 13:45\", \"2022-09-29 17:00\"),\n",
+    "    Session(\"ROOT\", \"2022-09-30 08:30\", \"2022-09-30 12:00\"),\n",
+    "    Session(\"Scikit-HEP\", \"2022-09-30 13:15\", \"2022-09-30 16:15\"),\n",
     "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# mask = (df.end < pd.to_datetime(\"2022-09-29 16:15\")) & (pd.to_datetime(\"2022-09-30 13:15\") < df.start)\n",
+    "# df[\"yes\"] = mask\n",
+    "# df[[\"start\", \"end\", \"yes\"]]"
    ]
   },
   {
@@ -226,8 +295,8 @@
     "    n = len(sessions)\n",
     "    overlap_matrix = np.zeros((n, n))\n",
     "    for i, s1 in enumerate(sessions):\n",
+    "        participants_s1 = get_participants_of_session(df, s1)\n",
     "        for j, s2 in enumerate(sessions):\n",
-    "            participants_s1 = get_participants_of_session(df, s1)\n",
     "            participants_s2 = get_participants_of_session(df, s2)\n",
     "            overlap_matrix[i, j] = len(np.intersect1d(participants_s1, participants_s2))\n",
     "    return overlap_matrix"
@@ -241,27 +310,34 @@
    "source": [
     "get_overlap_matrix(df, sessions)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
