Various improvements everywhere

--- a/notebooks/time_series_commits.ipynb
+++ b/notebooks/time_series_commits.ipynb
@@ -11,7 +11,11 @@
     "import git\n",
     "from pathlib import Path\n",
     "from datetime import date\n",
-    "from matplotlib import pyplot as plt"
+    "from matplotlib import pyplot as plt\n",
+    "import pandas as pd\n",
+    "\n",
+    "plt.style.use(\"science\")\n",
+    "plt.style.use(\"notebook\")"
    ]
   },
   {
@@ -128,7 +132,36 @@
     "ax.plot(dates, cumm)\n",
     "ax.set_xlabel(\"Date\")\n",
     "ax.set_ylabel(\"Number of unique commits\")\n",
-    "ax.set_xlim(date_parser.parse(\"01/01/2019\"), datetime.datetime.now())"
+    "ax.set_xlim(date_parser.parse(\"01/01/2019\"), datetime.datetime.now())\n",
+    "import matplotlib.dates as mdates\n",
+    "\n",
+    "ax.xaxis.set_major_locator(mdates.MonthLocator(interval=6))\n",
+    "fig.autofmt_xdate()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_dir = Path(\".\").resolve().parent / \"data\"\n",
+    "assert data_dir.is_dir()\n",
+    "pd.Series(cumm, index=dates).to_csv(data_dir / \"total_commits.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "label_mapping = {\n",
+    "    \"ml\": \"Machine learning\",\n",
+    "    \"cpluspluscourse\": \"C++\",\n",
+    "    \"cmake\": \"CMake\",\n",
+    "    \"cicd github\": \"CI/CD w/ github\",\n",
+    "}"
    ]
   },
   {
@@ -144,15 +177,19 @@
     "    label = None\n",
     "    alpha = 0.3\n",
     "    ls = \"-.\"\n",
-    "    if len(vs) >= 80:\n",
-    "        label = r\n",
-    "        alpha = 1\n",
-    "        ls = \"-\"\n",
     "    dates, cumm = dates2series(vs)\n",
+    "    if len(vs) >= 90:\n",
+    "        l = r.replace(\"hsf-training-\", \"\").replace(\"-webpage\", \"\").replace(\"-\", \" \")\n",
+    "        label = label_mapping.get(l, l)\n",
+    "        alpha = 1\n",
+    "        label += rf\" ($\\Sigma$={max(cumm):,})\"\n",
+    "        ls = \"-\"\n",
     "    ax.plot(dates, cumm, label=label, alpha=alpha, ls=ls)\n",
     "ax.set_xlim(start_date, datetime.datetime.now())\n",
     "ax.legend()\n",
-    "ax.set_ylabel(\"Number of commits w/o carpentries\")"
+    "ax.set_ylabel(\"Number of commits w/o carpentries\")\n",
+    "ax.xaxis.set_major_locator(mdates.MonthLocator(interval=6))\n",
+    "fig.autofmt_xdate()"
    ]
   },
   {
@@ -161,8 +198,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "datetime.datetime.now().date()"
+    "# import numpy as np\n",
+    "#\n",
+    "# fig, ax = plt.subplots()\n",
+    "# start_date = date_parser.parse(\"01/01/2019\")\n",
+    "# baseline = None\n",
+    "# for key, value in cc.timestamps_by_repo.items():\n",
+    "#     if baseline is None:\n",
+    "#         baseline = np.zeros_like(value)\n",
+    "#     dates, cumm = dates2series(vs)\n",
+    "#     label = None\n",
+    "#     ax.stairs(cumm+baseline, [*dates, datetime.datetime.now()], baseline=baseline, label=label, fill=True)\n",
+    "#     baseline = value\n",
+    "# ax.set_xlim(start_date, datetime.datetime.now())\n",
+    "# ax.legend()\n",
+    "# ax.set_ylabel(\"Number of commits w/o carpentries\")\n",
+    "# ax.xaxis.set_major_locator(mdates.MonthLocator(interval=6))\n",
+    "# fig.autofmt_xdate()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
