--- a/notebooks/time_series_educators.ipynb
+++ b/notebooks/time_series_educators.ipynb
@@ -13,9 +13,8 @@
     "from datetime import date\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "plt.style.use(\n",
-    "    \"https://github.com/dhaitz/matplotlib-stylesheets/raw/master/pitayasmoothie-light.mplstyle\"\n",
-    ")\n",
+    "plt.style.use(\"science\")\n",
+    "plt.style.use(\"notebook\")\n",
     "# plt.style.use('fivethirtyeight')"
    ]
   },
@@ -79,6 +78,8 @@
     "                else:\n",
     "                    # ensure key is present\n",
     "                    educator_count[educator_key_mapping.get(k, k)] += 0\n",
+    "            if roles:\n",
+    "                educator_count[\"all\"] += 1\n",
     "        print(commit, educator_count)\n",
     "        for k, v in educator_count.items():\n",
     "            educator_counts[k].append(v)\n",
@@ -103,11 +104,37 @@
    "outputs": [],
    "source": [
     "_, ax = plt.subplots()\n",
+    "\n",
     "for k, vs in educator_counts.items():\n",
+    "    if k == \"all\":\n",
+    "        continue\n",
     "    print(k, vs)\n",
     "    ax.plot(dt_times, vs, label=k)\n",
     "ax.legend(frameon=False)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "data_dir = Path(\".\").resolve().parent / \"data\"\n",
+    "assert data_dir.is_dir()\n",
+    "\n",
+    "pd.Series(educator_counts[\"all\"], index=dt_times).to_csv(\n",
+    "    data_dir / \"total_educators.csv\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
