Also count commit authors

--- a/notebooks/combine.ipynb
+++ b/notebooks/combine.ipynb
@@ -39,6 +39,7 @@
     "\n",
     "total_commits = read_timeseries(data_dir / \"total_commits.csv\")\n",
     "total_educators = read_timeseries(data_dir / \"total_educators.csv\")\n",
+    "total_cauthors = read_timeseries(data_dir / \"total_commit_authors.csv\")\n",
     "total_participants = read_timeseries(data_dir / \"total_participants_events.csv\")"
    ]
   },
@@ -59,24 +60,43 @@
     "\n",
     "fig, ax = plt.subplots()\n",
     "# ax.set_box_aspect(1)\n",
-    "ax = norm(total_educators).plot(\n",
-    "    ax=ax, label=f\"Educators ($\\Sigma$={total_educators.max():,})\"\n",
+    "ax = norm(total_participants).plot(\n",
+    "    ax=ax, label=f\"Registrations  ($\\Sigma$={int(total_participants.max()):,})\", lw=3.5\n",
     ")\n",
     "ax = norm(total_commits).plot(\n",
-    "    ax=ax, label=f\"Unique commits ($\\Sigma$={total_commits.max():,})\"\n",
+    "    ax=ax,\n",
+    "    label=f\"Unique commits ($\\Sigma$={total_commits.max():,})\",\n",
     ")\n",
-    "ax = norm(total_participants).plot(\n",
-    "    ax=ax, label=f\"Participants  ($\\Sigma$={int(total_participants.max()):,})\"\n",
+    "ax = norm(total_educators).plot(\n",
+    "    ax=ax, label=f\"Educators ($\\Sigma$={total_educators.max():,})\", ls=\"--\"\n",
     ")\n",
+    "ax = norm(total_cauthors).plot(\n",
+    "    ax=ax, label=f\"Unique commit authors ($\\Sigma$={total_cauthors.max():,})\", ls=\"--\"\n",
+    ")\n",
+    "\n",
     "ax.set_xlim(date_parser.parse(\"01/01/2020\"), datetime.datetime.now())\n",
     "ax.set_xlim()\n",
     "ax.set_ylabel(\"Normalized in arb. units\")\n",
-    "ax.legend()\n",
+    "ax.legend(fontsize=14)\n",
     "import matplotlib.dates as mdates\n",
     "\n",
-    "ax.xaxis.set_major_locator(mdates.MonthLocator(interval=6))\n",
-    "fig.autofmt_xdate()\n",
-    "ax.set_xlabel(\"Date\")"
+    "# ax.xaxis.set_major_locator(mdates.MonthLocator(interval=6))\n",
+    "# fig.autofmt_xdate()\n",
+    "ax.set_xlabel(\"\")\n",
+    "ax.set_title(\n",
+    "    \"Cumulative statistics (w/o carpentry contributions to commits)\", fontsize=12\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig.savefig(\n",
+    "    \"combined.png\",\n",
+    ")"
    ]
   },
   {
