--- a/notebooks/time_series_commits.ipynb
+++ b/notebooks/time_series_commits.ipynb
@@ -40,32 +40,53 @@
     "\n",
     "class CommitCounter:\n",
     "    def __init__(self):\n",
-    "        self._commit_messages = set()\n",
+    "        self._ignored_commit_messages = set()\n",
+    "        self._ignored_authors = set()\n",
     "        #: Unique commits only\n",
     "        self.timestamps = []\n",
     "        #: Commits per repo\n",
     "        self.timestamps_by_repo = defaultdict(list)\n",
     "        self.duplicates = 0\n",
+    "        self.new_author_timestamps = []\n",
     "\n",
-    "    def ignore_commits_from(self, repo_path: Path):\n",
+    "    def ignore_commits_from(self, repo_path: Path, ignore_authors=True):\n",
     "        r = git.Repo(repo_path)\n",
     "        ign = 0\n",
+    "        igna = 0\n",
     "        for commit in r.iter_commits():\n",
-    "            if not commit.message in self._commit_messages:\n",
+    "            if not commit.message in self._ignored_commit_messages:\n",
     "                ign += 1\n",
-    "            self._commit_messages.add(commit.message)\n",
-    "        print(f\"Ignored {ign:,} additional commits\")\n",
+    "            self._ignored_commit_messages.add(commit.message)\n",
+    "            # Slightly problematic\n",
+    "            if ignore_authors:\n",
+    "                self._ignored_authors.add(commit.author.email)\n",
+    "                igna += 1\n",
+    "        print(f\"Ignored {ign:,} additional commits, {igna:,} authors\")\n",
     "\n",
     "    def scan_repo(self, repo_path: Path):\n",
     "        r = git.Repo(repo_path)\n",
     "        for commit in r.iter_commits():\n",
     "            cd = date.fromtimestamp(commit.committed_date)\n",
-    "            if commit.message in self._commit_messages:\n",
+    "            if commit.author.email not in self._ignored_authors:\n",
+    "                self.new_author_timestamps.append(cd)\n",
+    "                self._ignored_authors.add(commit.author.email)\n",
+    "            if commit.message in self._ignored_commit_messages:\n",
     "                self.duplicates += 1\n",
     "                continue\n",
     "            self.timestamps_by_repo[repo_path.name].append(cd)\n",
     "            self.timestamps.append(cd)\n",
-    "            self._commit_messages.add(commit.message)"
+    "            self._ignored_commit_messages.add(commit.message)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# r = git.Repo(repo_paths[0])\n",
+    "# for commit in r.iter_commits():\n",
+    "#     break"
    ]
   },
   {
@@ -119,7 +140,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "dates, cumm = dates2series(cc.timestamps)"
+    "dates, cumm = dates2series(cc.timestamps)\n",
+    "dates_authors, cumm_authors = dates2series(cc.new_author_timestamps)"
    ]
   },
   {
@@ -130,6 +152,9 @@
    "source": [
     "fig, ax = plt.subplots()\n",
     "ax.plot(dates, cumm)\n",
+    "ax2 = ax.twinx()\n",
+    "ax2.plot(dates_authors, cumm_authors, label=\"Authors\")\n",
+    "ax2.set_ylabel(\"Authors\")\n",
     "ax.set_xlabel(\"Date\")\n",
     "ax.set_ylabel(\"Number of unique commits\")\n",
     "ax.set_xlim(date_parser.parse(\"01/01/2019\"), datetime.datetime.now())\n",
@@ -147,7 +172,10 @@
    "source": [
     "data_dir = Path(\".\").resolve().parent / \"data\"\n",
     "assert data_dir.is_dir()\n",
-    "pd.Series(cumm, index=dates).to_csv(data_dir / \"total_commits.csv\")"
+    "pd.Series(cumm, index=dates).to_csv(data_dir / \"total_commits.csv\")\n",
+    "pd.Series(cumm_authors, index=dates_authors).to_csv(\n",
+    "    data_dir / \"total_commit_authors.csv\"\n",
+    ")"
    ]
   },
   {
