--- a/notebooks/time_series_events.ipynb
+++ b/notebooks/time_series_events.ipynb
@@ -169,6 +169,7 @@
    "outputs": [],
    "source": [
     "_, ax = plt.subplots()\n",
+    "colors = plt.rcParams[\"axes.prop_cycle\"].by_key()[\"color\"]\n",
     "ys = []\n",
     "xs = []\n",
     "swcs = df.query(\"type == 'teach' & Category == 'SWC'\")\n",
@@ -179,7 +180,12 @@
     "xs.extend(singles[\"Topics (comma-separated)\"])\n",
     "ax.set_xticks(list(range(len(xs))))\n",
     "ax.set_xticklabels(xs, rotation=45)\n",
-    "ax.bar(list(range(len(xs))), ys)"
+    "\n",
+    "ax.bar(list(range(len(xs)))[:-3], ys[:-3], label=\"Absolute basics\")\n",
+    "ax.bar(list(range(len(xs)))[-3], ys[-3], color=colors[1], label=\"Basic\")\n",
+    "ax.bar(list(range(len(xs)))[-2:], ys[-2:], color=colors[2], label=\"Intermediate\")\n",
+    "ax.legend()\n",
+    "ax.set_ylabel(\"Participants\")"
    ]
   },
   {
