Add note about IRIS colors

--- a/notebooks/combine.ipynb
+++ b/notebooks/combine.ipynb
@@ -141,7 +141,8 @@
    "outputs": [],
    "source": [
     "iris_hep_purple = \"#6239b5\"\n",
-    "iris_hep_blue = \"#0083bf\""
+    "iris_hep_blue = \"#0083bf\"\n",
+    "# Actually should use from https://iris-hep.org/docs/logo.html"
    ]
   },
   {
